--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 generatorName: go
-inputSpec: https://schematic-openapi-da6da39.s3.amazonaws.com/latest.yml
+inputSpec: /Users/mango/development/schematic/schematic-api/docs/openapi.yaml
 templateDir: templates
 outputDir: api
 enablePostProcessFile: true
