--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -54,6 +54,7 @@ jobs:
       - name: Generate mocks
         run: |
           go generate ./...
+          git reset HEAD
           git diff --exit-code
 
       - name: Confirm generated code is up to date
