Add webhook signature verification

--- a/.fernignore
+++ b/.fernignore
@@ -16,3 +16,5 @@ http/offline.go
 logger/logger.go
 mocks/http_mock.go
 option/custom_options.go
+webhooks/verification.go
+webhooks/verification_test.go
