Fix webhook headers and add test server

--- a/.fernignore
+++ b/.fernignore
@@ -3,6 +3,7 @@
 README.md
 buffer/buffer.go
 cache/cache.go
+cmd/webhook-test-server/main.go
 core/request_option.go
 core/custom_options.go
 custom_types.go
