--- a/.fernignore
+++ b/.fernignore
@@ -13,6 +13,7 @@ client/schematic_client.go
 client/schematic_client_test.go
 datastream/cache.go
 datastream/client.go
+datastream/client_test.go
 datastream/consts.go
 datastream/types.go
 flags/flags.go
