add initial datastream functionality (#55)
* add initial datastream functionality

* refactor to use internal websocket json functionality

* make cache provider and cache ttl configurable

* refactor get company and user to use queue of channels for requests

* fix typo

* clean up channels when closing and errors retrieving resources

* wait for all flags to be loaded

* handle read timeout errors, handle schematic client errors consistently, general cleanup

* change default cache ttl

* improve url setting

* ensure offline mode works with datastream check flag

* implement new logger functionality

* more logging fixes

* fix log formatting

* only add requests if we actually made a request

* return errors in message handlers

* chack against meddage.Data

* add local cache delete functionlaity

* don't reconnect in read panics

* only use local cache for flags and do not expire them

* expire flags far into the future

* do not log error when closing and unable to read

* add backoff for reconnceting to server

* Chris/sch 3356 add redis option for datastream cache (#60)

* add initial datastream functionality

* make cache provider and cache ttl configurable

* add redis cache type and config for datastream

* refactor redis cache

* fix rebase and add redis config support

* fixed some small things missed in rebase

* add ability to set no expiration on cache

* use const for resource fetch timeout

* add datastream to readme

* add functionality to delete flags

* fix redis cache

* rename datastream client constructor

* fix error logging

* refactor datastream client to reduce public api

* add fallback functionlaity to clasic flag check if datastream not connected

* short circuit at the right time

* namespace cache keys

* ensure we're ignoreing all the correct files

* fix base url

* change redis version

* tidy go mod

* add a tesst

* some cleanup

* ignore client test

* add redis implementation of deletemissing

* convert message type to string


--- a/.fernignore
+++ b/.fernignore
@@ -3,12 +3,19 @@
 README.md
 buffer/buffer.go
 cache/cache.go
+cache/local.go
+cache/redis.go
 cmd/webhook-test-server/main.go
 core/request_option.go
 core/custom_options.go
 custom_types.go
 client/schematic_client.go
 client/schematic_client_test.go
+datastream/cache.go
+datastream/client.go
+datastream/client_test.go
+datastream/consts.go
+datastream/types.go
 flags/flags.go
 flags/flags_test.go
 generate.go
