--- a/.fernignore
+++ b/.fernignore
@@ -1,11 +1,18 @@
 # Specify files that shouldn't be modified by Fern
 
+.claude/settings.json
+.github/CODEOWNERS
+.github/dependabot.yml
+.github/workflows/claude.yml
+CLAUDE.md
 README.md
 go.mod
 go.sum
 buffer/buffer.go
 cache/cache.go
 cache/local.go
+cache/local_benchmark_test.go
+cache/local_test.go
 cache/redis.go
 cmd/webhook-test-server/main.go
 core/request_option.go
