refactor flag check cache to cache entire flag check response so we have entitlements on all flagcheckwithentitlement calls

--- a/.fernignore
+++ b/.fernignore
@@ -19,6 +19,7 @@ cache/local_benchmark_test.go
 cache/local_test.go
 cache/redis.go
 cmd/webhook-test-server/main.go
+core/check_flag_response.go
 core/request_option.go
 core/custom_options.go
 core/logger.go
